--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@
               </div>
             </div>
             <div class="img-div">
-              <img class="big-img" src="./public/brogram.png" alt="thumbnail" />
+              <img
+                class="big-img"
+                src="https://github.com/Parth424-blip/Web_portfolio/blob/main/public/brogram.png?raw=true"
+                alt="thumbnail"
+              />
             </div>
           </div>
           <div class="project-card">
@@ -158,7 +162,7 @@
             <div class="img-div">
               <img
                 class="big-img"
-                src="./public/smolstore.png"
+                src="https://github.com/Parth424-blip/Web_portfolio/blob/main/public/smolstore.png?raw=true"
                 alt="thumbnail"
               />
             </div>
@@ -196,7 +200,7 @@
             <div class="img-div">
               <img
                 class="big-img"
-                src="./public/paswordmanager.png"
+                src="https://github.com/Parth424-blip/Web_portfolio/blob/main/public/paswordmanager.png?raw=true"
                 alt="thumbnail"
               />
             </div>
